<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E1E1"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="showInspiration"
            android:layout_margin="5dp"
            android:layout_weight="50"
            android:text="INSPIRATION" />

        <TextView
            android:id="@+id/itemTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="50"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/item" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_weight="70">

    </androidx.recyclerview.widget.RecyclerView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical"
        android:weightSum="100">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:id="@+id/descriptionEditTextView"
            android:maxLength="250"
            android:maxLines="6"
            android:layout_weight="33"
            android:hint="@string/editTextViewHint" />

        <Button
            android:layout_width="match_parent"
            android:onClick="addDescription"
            android:id="@+id/editDescriptionButton"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="34"
            android:text="@string/buttonTwoText" />

        <RadioGroup
            android:layout_width="match_parent"
            android:id="@+id/radioGroup"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="horizontal"
            android:weightSum="100">

            <RadioButton
                android:id="@+id/firstPersonRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="33"
                android:text="@string/radioButtonOneText" />

            <RadioButton
                android:id="@+id/secondPersonRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="33"
                android:text="@string/radioButtonTwoText" />

            <RadioButton
                android:id="@+id/thirdPersonRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="33"
                android:text="@string/radioButtonThreeText" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>